# shaddocx

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  shaddoc.json
src/: __main__.py  _version.py
src/tests/: test_urls.py
src/utils/: traverse.py  twitter.py  urlutils.py  youtube.py
utils/: traverse.py  urlutils.py  youtube.py
