[build-system]

requires = [
    "pytube",
    "urllib3",
    "psutil",
    "requests",
    "validators",
    "setuptools",
    "setuptools-scm",
    "beautifulsoup4", 
    ]
build-backend = "setuptools.build_meta"

[project]
name = "Shaddox"
version = "1.0.0"
authors = [
    {name = "Dilibe Fidelugwuowo", email = "franklinfidelugwuowo@gmail.com"}
]
description = ""
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"


[project.scripts]
sdx = "src:cli"

[tool.setuptools_scm]
write_to = "src/_version.py"  # File to write version info

[tool.setuptools.packages.find]
where = ["src"]
include = ["utils"]
exclude = ["tests"]
